--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
+    "get-mongodb-version": "^1.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.2",
     "zone.js": "~0.8.26"
